# libOpcTrigaPLC

./: CMakeLists.txt  README.md  flake.nix  libOpcTrigaPLC.cpp  libOpcTrigaPLC.h  test.cpp
include/: libOpcTrigaPLC.h
resources/: LibOpcTrigaPLCConfig.cmake.in  libOpcTrigaPLC.conf
src/: libOpcTrigaPLC.cpp  test.cpp
